Fix ios responsive, 24hrs fix and truncate message.

--- a/src/app/advice/advice-form/advice-form.component.scss
+++ b/src/app/advice/advice-form/advice-form.component.scss
@@ -9,5 +9,9 @@
 }
 
 .md-container{
-  flex: 1 1 auto !important;
+  min-height: 100%;
+}
+
+.logo-container{
+  max-height: 50px;
 }
